Optimizacion/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    coma
    dolarn
    false
    function
    ptcoma
    return
    returns
    true

Grammar

Rule 0     S' -> init
Rule 1     init -> LISTACONTENIDO
Rule 2     LISTACONTENIDO -> LISTACONTENIDO CONTENIDO
Rule 3     LISTACONTENIDO -> CONTENIDO
Rule 4     CONTENIDO -> ETIQUETA
Rule 5     CONTENIDO -> SALTO
Rule 6     CONTENIDO -> IMPORTACIONES
Rule 7     CONTENIDO -> METODOS
Rule 8     CONTENIDO -> ASIGNACION
Rule 9     CONTENIDO -> CONDICIONIF
Rule 10    CONTENIDO -> PRINTF
Rule 11    PRINTF -> print para EXP parc
Rule 12    CONDICIONIF -> if OPERACION dospuntos SALTO
Rule 13    CONDICIONIF -> if EXP dospuntos SALTO
Rule 14    ASIGNACION -> id igual OPERACION
Rule 15    ASIGNACION -> id igual EXP
Rule 16    ASIGNACION -> id igual METODOS
Rule 17    ASIGNACION -> VECTOR igual OPERACION
Rule 18    METODOS -> id id para parc dospuntos
Rule 19    METODOS -> idPunto para EXP parc
Rule 20    METODOS -> id para EXP parc
Rule 21    METODOS -> id para parc
Rule 22    IMPORTACIONES -> r_from idPunto import id
Rule 23    IMPORTACIONES -> import idPunto as id
Rule 24    IMPORTACIONES -> import idPunto id
Rule 25    IMPORTACIONES -> r_from id import id
Rule 26    IMPORTACIONES -> import id as id
Rule 27    IMPORTACIONES -> import id id
Rule 28    IMPORTACIONES -> r_from idPunto import multiplicacion
Rule 29    IMPORTACIONES -> r_from id import multiplicacion
Rule 30    IMPORTACIONES -> r_from gotos import with_goto
Rule 31    IMPORTACIONES -> arroba with_goto
Rule 32    SALTO -> gotos punto id
Rule 33    ETIQUETA -> label punto id
Rule 34    VECTOR -> id corchetea EXP corchetec
Rule 35    VECTOR -> id corchetea corchetec
Rule 36    OPERACION -> EXP mas EXP
Rule 37    OPERACION -> EXP menos EXP
Rule 38    OPERACION -> EXP multiplicacion EXP
Rule 39    OPERACION -> EXP division EXP
Rule 40    OPERACION -> EXP modulo EXP
Rule 41    OPERACION -> EXP elevado EXP
Rule 42    OPERACION -> EXP and EXP
Rule 43    OPERACION -> EXP or EXP
Rule 44    OPERACION -> EXP mayor EXP
Rule 45    OPERACION -> EXP menor EXP
Rule 46    OPERACION -> id igual_igual EXP
Rule 47    OPERACION -> EXP mayor_igual EXP
Rule 48    OPERACION -> EXP menor_igual EXP
Rule 49    OPERACION -> EXP diferente1 EXP
Rule 50    OPERACION -> EXP diferente2 EXP
Rule 51    OPERACION -> corchetea EXP corchetec
Rule 52    OPERACION -> corchetea corchetec
Rule 53    OPERACION -> VECTOR
Rule 54    EXP -> mas EXP
Rule 55    EXP -> menos EXP
Rule 56    EXP -> not EXP
Rule 57    EXP -> int
Rule 58    EXP -> decimales
Rule 59    EXP -> cadena
Rule 60    EXP -> cadenaString
Rule 61    EXP -> id
Rule 62    EXP -> null
Rule 63    EXP -> idPunto

Terminals, with rules where they appear

and                  : 42
arroba               : 31
as                   : 23 26
cadena               : 59
cadenaString         : 60
coma                 : 
corchetea            : 34 35 51 52
corchetec            : 34 35 51 52
decimales            : 58
diferente1           : 49
diferente2           : 50
division             : 39
dolarn               : 
dospuntos            : 12 13 18
elevado              : 41
error                : 
false                : 
function             : 
gotos                : 30 32
id                   : 14 15 16 18 18 20 21 22 23 24 25 25 26 26 27 27 29 32 33 34 35 46 61
idPunto              : 19 22 23 24 28 63
if                   : 12 13
igual                : 14 15 16 17
igual_igual          : 46
import               : 22 23 24 25 26 27 28 29 30
int                  : 57
label                : 33
mas                  : 36 54
mayor                : 44
mayor_igual          : 47
menor                : 45
menor_igual          : 48
menos                : 37 55
modulo               : 40
multiplicacion       : 28 29 38
not                  : 56
null                 : 62
or                   : 43
para                 : 11 18 19 20 21
parc                 : 11 18 19 20 21
print                : 11
ptcoma               : 
punto                : 32 33
r_from               : 22 25 28 29 30
return               : 
returns              : 
true                 : 
with_goto            : 30 31

Nonterminals, with rules where they appear

ASIGNACION           : 8
CONDICIONIF          : 9
CONTENIDO            : 2 3
ETIQUETA             : 4
EXP                  : 11 13 15 19 20 34 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 47 47 48 48 49 49 50 50 51 54 55 56
IMPORTACIONES        : 6
LISTACONTENIDO       : 1 2
METODOS              : 7 16
OPERACION            : 12 14 17
PRINTF               : 10
SALTO                : 5 12 13
VECTOR               : 17 53
init                 : 0

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . LISTACONTENIDO
    (2) LISTACONTENIDO -> . LISTACONTENIDO CONTENIDO
    (3) LISTACONTENIDO -> . CONTENIDO
    (4) CONTENIDO -> . ETIQUETA
    (5) CONTENIDO -> . SALTO
    (6) CONTENIDO -> . IMPORTACIONES
    (7) CONTENIDO -> . METODOS
    (8) CONTENIDO -> . ASIGNACION
    (9) CONTENIDO -> . CONDICIONIF
    (10) CONTENIDO -> . PRINTF
    (33) ETIQUETA -> . label punto id
    (32) SALTO -> . gotos punto id
    (22) IMPORTACIONES -> . r_from idPunto import id
    (23) IMPORTACIONES -> . import idPunto as id
    (24) IMPORTACIONES -> . import idPunto id
    (25) IMPORTACIONES -> . r_from id import id
    (26) IMPORTACIONES -> . import id as id
    (27) IMPORTACIONES -> . import id id
    (28) IMPORTACIONES -> . r_from idPunto import multiplicacion
    (29) IMPORTACIONES -> . r_from id import multiplicacion
    (30) IMPORTACIONES -> . r_from gotos import with_goto
    (31) IMPORTACIONES -> . arroba with_goto
    (18) METODOS -> . id id para parc dospuntos
    (19) METODOS -> . idPunto para EXP parc
    (20) METODOS -> . id para EXP parc
    (21) METODOS -> . id para parc
    (14) ASIGNACION -> . id igual OPERACION
    (15) ASIGNACION -> . id igual EXP
    (16) ASIGNACION -> . id igual METODOS
    (17) ASIGNACION -> . VECTOR igual OPERACION
    (12) CONDICIONIF -> . if OPERACION dospuntos SALTO
    (13) CONDICIONIF -> . if EXP dospuntos SALTO
    (11) PRINTF -> . print para EXP parc
    (34) VECTOR -> . id corchetea EXP corchetec
    (35) VECTOR -> . id corchetea corchetec

    label           shift and go to state 11
    gotos           shift and go to state 13
    r_from          shift and go to state 14
    import          shift and go to state 16
    arroba          shift and go to state 17
    id              shift and go to state 12
    idPunto         shift and go to state 15
    if              shift and go to state 19
    print           shift and go to state 20

    init                           shift and go to state 1
    LISTACONTENIDO                 shift and go to state 2
    CONTENIDO                      shift and go to state 3
    ETIQUETA                       shift and go to state 4
    SALTO                          shift and go to state 5
    IMPORTACIONES                  shift and go to state 6
    METODOS                        shift and go to state 7
    ASIGNACION                     shift and go to state 8
    CONDICIONIF                    shift and go to state 9
    PRINTF                         shift and go to state 10
    VECTOR                         shift and go to state 18

state 1

    (0) S' -> init .



state 2

    (1) init -> LISTACONTENIDO .
    (2) LISTACONTENIDO -> LISTACONTENIDO . CONTENIDO
    (4) CONTENIDO -> . ETIQUETA
    (5) CONTENIDO -> . SALTO
    (6) CONTENIDO -> . IMPORTACIONES
    (7) CONTENIDO -> . METODOS
    (8) CONTENIDO -> . ASIGNACION
    (9) CONTENIDO -> . CONDICIONIF
    (10) CONTENIDO -> . PRINTF
    (33) ETIQUETA -> . label punto id
    (32) SALTO -> . gotos punto id
    (22) IMPORTACIONES -> . r_from idPunto import id
    (23) IMPORTACIONES -> . import idPunto as id
    (24) IMPORTACIONES -> . import idPunto id
    (25) IMPORTACIONES -> . r_from id import id
    (26) IMPORTACIONES -> . import id as id
    (27) IMPORTACIONES -> . import id id
    (28) IMPORTACIONES -> . r_from idPunto import multiplicacion
    (29) IMPORTACIONES -> . r_from id import multiplicacion
    (30) IMPORTACIONES -> . r_from gotos import with_goto
    (31) IMPORTACIONES -> . arroba with_goto
    (18) METODOS -> . id id para parc dospuntos
    (19) METODOS -> . idPunto para EXP parc
    (20) METODOS -> . id para EXP parc
    (21) METODOS -> . id para parc
    (14) ASIGNACION -> . id igual OPERACION
    (15) ASIGNACION -> . id igual EXP
    (16) ASIGNACION -> . id igual METODOS
    (17) ASIGNACION -> . VECTOR igual OPERACION
    (12) CONDICIONIF -> . if OPERACION dospuntos SALTO
    (13) CONDICIONIF -> . if EXP dospuntos SALTO
    (11) PRINTF -> . print para EXP parc
    (34) VECTOR -> . id corchetea EXP corchetec
    (35) VECTOR -> . id corchetea corchetec

    $end            reduce using rule 1 (init -> LISTACONTENIDO .)
    label           shift and go to state 11
    gotos           shift and go to state 13
    r_from          shift and go to state 14
    import          shift and go to state 16
    arroba          shift and go to state 17
    id              shift and go to state 12
    idPunto         shift and go to state 15
    if              shift and go to state 19
    print           shift and go to state 20

    CONTENIDO                      shift and go to state 21
    ETIQUETA                       shift and go to state 4
    SALTO                          shift and go to state 5
    IMPORTACIONES                  shift and go to state 6
    METODOS                        shift and go to state 7
    ASIGNACION                     shift and go to state 8
    CONDICIONIF                    shift and go to state 9
    PRINTF                         shift and go to state 10
    VECTOR                         shift and go to state 18

state 3

    (3) LISTACONTENIDO -> CONTENIDO .

    label           reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    gotos           reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    r_from          reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    import          reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    arroba          reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    id              reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    idPunto         reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    if              reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    print           reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)
    $end            reduce using rule 3 (LISTACONTENIDO -> CONTENIDO .)


state 4

    (4) CONTENIDO -> ETIQUETA .

    label           reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    gotos           reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    r_from          reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    import          reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    arroba          reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    id              reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    idPunto         reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    if              reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    print           reduce using rule 4 (CONTENIDO -> ETIQUETA .)
    $end            reduce using rule 4 (CONTENIDO -> ETIQUETA .)


state 5

    (5) CONTENIDO -> SALTO .

    label           reduce using rule 5 (CONTENIDO -> SALTO .)
    gotos           reduce using rule 5 (CONTENIDO -> SALTO .)
    r_from          reduce using rule 5 (CONTENIDO -> SALTO .)
    import          reduce using rule 5 (CONTENIDO -> SALTO .)
    arroba          reduce using rule 5 (CONTENIDO -> SALTO .)
    id              reduce using rule 5 (CONTENIDO -> SALTO .)
    idPunto         reduce using rule 5 (CONTENIDO -> SALTO .)
    if              reduce using rule 5 (CONTENIDO -> SALTO .)
    print           reduce using rule 5 (CONTENIDO -> SALTO .)
    $end            reduce using rule 5 (CONTENIDO -> SALTO .)


state 6

    (6) CONTENIDO -> IMPORTACIONES .

    label           reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    gotos           reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    r_from          reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    import          reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    arroba          reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    id              reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    idPunto         reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    if              reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    print           reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)
    $end            reduce using rule 6 (CONTENIDO -> IMPORTACIONES .)


state 7

    (7) CONTENIDO -> METODOS .

    label           reduce using rule 7 (CONTENIDO -> METODOS .)
    gotos           reduce using rule 7 (CONTENIDO -> METODOS .)
    r_from          reduce using rule 7 (CONTENIDO -> METODOS .)
    import          reduce using rule 7 (CONTENIDO -> METODOS .)
    arroba          reduce using rule 7 (CONTENIDO -> METODOS .)
    id              reduce using rule 7 (CONTENIDO -> METODOS .)
    idPunto         reduce using rule 7 (CONTENIDO -> METODOS .)
    if              reduce using rule 7 (CONTENIDO -> METODOS .)
    print           reduce using rule 7 (CONTENIDO -> METODOS .)
    $end            reduce using rule 7 (CONTENIDO -> METODOS .)


state 8

    (8) CONTENIDO -> ASIGNACION .

    label           reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    gotos           reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    r_from          reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    import          reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    arroba          reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    id              reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    idPunto         reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    if              reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    print           reduce using rule 8 (CONTENIDO -> ASIGNACION .)
    $end            reduce using rule 8 (CONTENIDO -> ASIGNACION .)


state 9

    (9) CONTENIDO -> CONDICIONIF .

    label           reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    gotos           reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    r_from          reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    import          reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    arroba          reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    id              reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    idPunto         reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    if              reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    print           reduce using rule 9 (CONTENIDO -> CONDICIONIF .)
    $end            reduce using rule 9 (CONTENIDO -> CONDICIONIF .)


state 10

    (10) CONTENIDO -> PRINTF .

    label           reduce using rule 10 (CONTENIDO -> PRINTF .)
    gotos           reduce using rule 10 (CONTENIDO -> PRINTF .)
    r_from          reduce using rule 10 (CONTENIDO -> PRINTF .)
    import          reduce using rule 10 (CONTENIDO -> PRINTF .)
    arroba          reduce using rule 10 (CONTENIDO -> PRINTF .)
    id              reduce using rule 10 (CONTENIDO -> PRINTF .)
    idPunto         reduce using rule 10 (CONTENIDO -> PRINTF .)
    if              reduce using rule 10 (CONTENIDO -> PRINTF .)
    print           reduce using rule 10 (CONTENIDO -> PRINTF .)
    $end            reduce using rule 10 (CONTENIDO -> PRINTF .)


state 11

    (33) ETIQUETA -> label . punto id

    punto           shift and go to state 22


state 12

    (18) METODOS -> id . id para parc dospuntos
    (20) METODOS -> id . para EXP parc
    (21) METODOS -> id . para parc
    (14) ASIGNACION -> id . igual OPERACION
    (15) ASIGNACION -> id . igual EXP
    (16) ASIGNACION -> id . igual METODOS
    (34) VECTOR -> id . corchetea EXP corchetec
    (35) VECTOR -> id . corchetea corchetec

    id              shift and go to state 23
    para            shift and go to state 24
    igual           shift and go to state 25
    corchetea       shift and go to state 26


state 13

    (32) SALTO -> gotos . punto id

    punto           shift and go to state 27


state 14

    (22) IMPORTACIONES -> r_from . idPunto import id
    (25) IMPORTACIONES -> r_from . id import id
    (28) IMPORTACIONES -> r_from . idPunto import multiplicacion
    (29) IMPORTACIONES -> r_from . id import multiplicacion
    (30) IMPORTACIONES -> r_from . gotos import with_goto

    idPunto         shift and go to state 28
    id              shift and go to state 29
    gotos           shift and go to state 30


state 15

    (19) METODOS -> idPunto . para EXP parc

    para            shift and go to state 31


state 16

    (23) IMPORTACIONES -> import . idPunto as id
    (24) IMPORTACIONES -> import . idPunto id
    (26) IMPORTACIONES -> import . id as id
    (27) IMPORTACIONES -> import . id id

    idPunto         shift and go to state 32
    id              shift and go to state 33


state 17

    (31) IMPORTACIONES -> arroba . with_goto

    with_goto       shift and go to state 34


state 18

    (17) ASIGNACION -> VECTOR . igual OPERACION

    igual           shift and go to state 35


state 19

    (12) CONDICIONIF -> if . OPERACION dospuntos SALTO
    (13) CONDICIONIF -> if . EXP dospuntos SALTO
    (36) OPERACION -> . EXP mas EXP
    (37) OPERACION -> . EXP menos EXP
    (38) OPERACION -> . EXP multiplicacion EXP
    (39) OPERACION -> . EXP division EXP
    (40) OPERACION -> . EXP modulo EXP
    (41) OPERACION -> . EXP elevado EXP
    (42) OPERACION -> . EXP and EXP
    (43) OPERACION -> . EXP or EXP
    (44) OPERACION -> . EXP mayor EXP
    (45) OPERACION -> . EXP menor EXP
    (46) OPERACION -> . id igual_igual EXP
    (47) OPERACION -> . EXP mayor_igual EXP
    (48) OPERACION -> . EXP menor_igual EXP
    (49) OPERACION -> . EXP diferente1 EXP
    (50) OPERACION -> . EXP diferente2 EXP
    (51) OPERACION -> . corchetea EXP corchetec
    (52) OPERACION -> . corchetea corchetec
    (53) OPERACION -> . VECTOR
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto
    (34) VECTOR -> . id corchetea EXP corchetec
    (35) VECTOR -> . id corchetea corchetec

    id              shift and go to state 40
    corchetea       shift and go to state 41
    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    null            shift and go to state 48
    idPunto         shift and go to state 49

    OPERACION                      shift and go to state 36
    EXP                            shift and go to state 37
    VECTOR                         shift and go to state 42

state 20

    (11) PRINTF -> print . para EXP parc

    para            shift and go to state 50


state 21

    (2) LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .

    label           reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    gotos           reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    r_from          reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    import          reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    arroba          reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    id              reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    idPunto         reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    if              reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    print           reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)
    $end            reduce using rule 2 (LISTACONTENIDO -> LISTACONTENIDO CONTENIDO .)


state 22

    (33) ETIQUETA -> label punto . id

    id              shift and go to state 51


state 23

    (18) METODOS -> id id . para parc dospuntos

    para            shift and go to state 52


state 24

    (20) METODOS -> id para . EXP parc
    (21) METODOS -> id para . parc
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto

    parc            shift and go to state 55
    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    id              shift and go to state 53
    null            shift and go to state 48
    idPunto         shift and go to state 49

    EXP                            shift and go to state 54

state 25

    (14) ASIGNACION -> id igual . OPERACION
    (15) ASIGNACION -> id igual . EXP
    (16) ASIGNACION -> id igual . METODOS
    (36) OPERACION -> . EXP mas EXP
    (37) OPERACION -> . EXP menos EXP
    (38) OPERACION -> . EXP multiplicacion EXP
    (39) OPERACION -> . EXP division EXP
    (40) OPERACION -> . EXP modulo EXP
    (41) OPERACION -> . EXP elevado EXP
    (42) OPERACION -> . EXP and EXP
    (43) OPERACION -> . EXP or EXP
    (44) OPERACION -> . EXP mayor EXP
    (45) OPERACION -> . EXP menor EXP
    (46) OPERACION -> . id igual_igual EXP
    (47) OPERACION -> . EXP mayor_igual EXP
    (48) OPERACION -> . EXP menor_igual EXP
    (49) OPERACION -> . EXP diferente1 EXP
    (50) OPERACION -> . EXP diferente2 EXP
    (51) OPERACION -> . corchetea EXP corchetec
    (52) OPERACION -> . corchetea corchetec
    (53) OPERACION -> . VECTOR
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto
    (18) METODOS -> . id id para parc dospuntos
    (19) METODOS -> . idPunto para EXP parc
    (20) METODOS -> . id para EXP parc
    (21) METODOS -> . id para parc
    (34) VECTOR -> . id corchetea EXP corchetec
    (35) VECTOR -> . id corchetea corchetec

    id              shift and go to state 56
    corchetea       shift and go to state 41
    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    null            shift and go to state 48
    idPunto         shift and go to state 60

    OPERACION                      shift and go to state 57
    EXP                            shift and go to state 58
    METODOS                        shift and go to state 59
    VECTOR                         shift and go to state 42

state 26

    (34) VECTOR -> id corchetea . EXP corchetec
    (35) VECTOR -> id corchetea . corchetec
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto

    corchetec       shift and go to state 62
    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    id              shift and go to state 53
    null            shift and go to state 48
    idPunto         shift and go to state 49

    EXP                            shift and go to state 61

state 27

    (32) SALTO -> gotos punto . id

    id              shift and go to state 63


state 28

    (22) IMPORTACIONES -> r_from idPunto . import id
    (28) IMPORTACIONES -> r_from idPunto . import multiplicacion

    import          shift and go to state 64


state 29

    (25) IMPORTACIONES -> r_from id . import id
    (29) IMPORTACIONES -> r_from id . import multiplicacion

    import          shift and go to state 65


state 30

    (30) IMPORTACIONES -> r_from gotos . import with_goto

    import          shift and go to state 66


state 31

    (19) METODOS -> idPunto para . EXP parc
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto

    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    id              shift and go to state 53
    null            shift and go to state 48
    idPunto         shift and go to state 49

    EXP                            shift and go to state 67

state 32

    (23) IMPORTACIONES -> import idPunto . as id
    (24) IMPORTACIONES -> import idPunto . id

    as              shift and go to state 68
    id              shift and go to state 69


state 33

    (26) IMPORTACIONES -> import id . as id
    (27) IMPORTACIONES -> import id . id

    as              shift and go to state 71
    id              shift and go to state 70


state 34

    (31) IMPORTACIONES -> arroba with_goto .

    label           reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    gotos           reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    r_from          reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    import          reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    arroba          reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    id              reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    idPunto         reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    if              reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    print           reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)
    $end            reduce using rule 31 (IMPORTACIONES -> arroba with_goto .)


state 35

    (17) ASIGNACION -> VECTOR igual . OPERACION
    (36) OPERACION -> . EXP mas EXP
    (37) OPERACION -> . EXP menos EXP
    (38) OPERACION -> . EXP multiplicacion EXP
    (39) OPERACION -> . EXP division EXP
    (40) OPERACION -> . EXP modulo EXP
    (41) OPERACION -> . EXP elevado EXP
    (42) OPERACION -> . EXP and EXP
    (43) OPERACION -> . EXP or EXP
    (44) OPERACION -> . EXP mayor EXP
    (45) OPERACION -> . EXP menor EXP
    (46) OPERACION -> . id igual_igual EXP
    (47) OPERACION -> . EXP mayor_igual EXP
    (48) OPERACION -> . EXP menor_igual EXP
    (49) OPERACION -> . EXP diferente1 EXP
    (50) OPERACION -> . EXP diferente2 EXP
    (51) OPERACION -> . corchetea EXP corchetec
    (52) OPERACION -> . corchetea corchetec
    (53) OPERACION -> . VECTOR
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto
    (34) VECTOR -> . id corchetea EXP corchetec
    (35) VECTOR -> . id corchetea corchetec

    id              shift and go to state 40
    corchetea       shift and go to state 41
    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    null            shift and go to state 48
    idPunto         shift and go to state 49

    VECTOR                         shift and go to state 42
    OPERACION                      shift and go to state 72
    EXP                            shift and go to state 73

state 36

    (12) CONDICIONIF -> if OPERACION . dospuntos SALTO

    dospuntos       shift and go to state 74


state 37

    (13) CONDICIONIF -> if EXP . dospuntos SALTO
    (36) OPERACION -> EXP . mas EXP
    (37) OPERACION -> EXP . menos EXP
    (38) OPERACION -> EXP . multiplicacion EXP
    (39) OPERACION -> EXP . division EXP
    (40) OPERACION -> EXP . modulo EXP
    (41) OPERACION -> EXP . elevado EXP
    (42) OPERACION -> EXP . and EXP
    (43) OPERACION -> EXP . or EXP
    (44) OPERACION -> EXP . mayor EXP
    (45) OPERACION -> EXP . menor EXP
    (47) OPERACION -> EXP . mayor_igual EXP
    (48) OPERACION -> EXP . menor_igual EXP
    (49) OPERACION -> EXP . diferente1 EXP
    (50) OPERACION -> EXP . diferente2 EXP

    dospuntos       shift and go to state 75
    mas             shift and go to state 76
    menos           shift and go to state 77
    multiplicacion  shift and go to state 78
    division        shift and go to state 79
    modulo          shift and go to state 80
    elevado         shift and go to state 81
    and             shift and go to state 82
    or              shift and go to state 83
    mayor           shift and go to state 84
    menor           shift and go to state 85
    mayor_igual     shift and go to state 86
    menor_igual     shift and go to state 87
    diferente1      shift and go to state 88
    diferente2      shift and go to state 89


state 38

    (54) EXP -> mas . EXP
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto

    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    id              shift and go to state 53
    null            shift and go to state 48
    idPunto         shift and go to state 49

    EXP                            shift and go to state 90

state 39

    (55) EXP -> menos . EXP
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto

    mas             shift and go to state 38
    menos           shift and go to state 39
    not             shift and go to state 43
    int             shift and go to state 44
    decimales       shift and go to state 45
    cadena          shift and go to state 46
    cadenaString    shift and go to state 47
    id              shift and go to state 53
    null            shift and go to state 48
    idPunto         shift and go to state 49

    EXP                            shift and go to state 91

state 40

    (46) OPERACION -> id . igual_igual EXP
    (61) EXP -> id .
    (34) VECTOR -> id . corchetea EXP corchetec
    (35) VECTOR -> id . corchetea corchetec

    igual_igual     shift and go to state 92
    dospuntos       reduce using rule 61 (EXP -> id .)
    mas             reduce using rule 61 (EXP -> id .)
    menos           reduce using rule 61 (EXP -> id .)
    multiplicacion  reduce using rule 61 (EXP -> id .)
    division        reduce using rule 61 (EXP -> id .)
    modulo          reduce using rule 61 (EXP -> id .)
    elevado         reduce using rule 61 (EXP -> id .)
    and             reduce using rule 61 (EXP -> id .)
    or              reduce using rule 61 (EXP -> id .)
    mayor           reduce using rule 61 (EXP -> id .)
    menor           reduce using rule 61 (EXP -> id .)
    mayor_igual     reduce using rule 61 (EXP -> id .)
    menor_igual     reduce using rule 61 (EXP -> id .)
    diferente1      reduce using rule 61 (EXP -> id .)
    diferente2      reduce using rule 61 (EXP -> id .)
    corchetea       shift and go to state 26


state 41

    (51) OPERACION -> corchetea . EXP corchetec
    (52) OPERACION -> corchetea . corchetec
    (54) EXP -> . mas EXP
    (55) EXP -> . menos EXP
    (56) EXP -> . not EXP
    (57) EXP -> . int
    (58) EXP -> . decimales
    (59) EXP -> . cadena
    (60) EXP -> . cadenaString
    (61) EXP -> . id
    (62) EXP -> . null
    (63) EXP -> . idPunto
